fixed vertical alignment, added textlink classes

--- a/src/components/_ux_global_design.scss
+++ b/src/components/_ux_global_design.scss
@@ -262,6 +262,7 @@ BUTTONS
  --------------------------*/ 
  .textlink-1 {
     color: $clr-hero;
+    cursor: pointer;
     &:hover {
       color: mix($clr-black, $clr-hero, 10%);
     }
