--- a/src/components/domainList/domainList.scss
+++ b/src/components/domainList/domainList.scss
@@ -7,15 +7,12 @@ table {
   justify-content: center;
   border: 1px solid $clr-icdg-1;
   margin-bottom: 1%;
-  
-  
 }
 
 th, td {
   
   text-align: left;
   padding: 1.5%;
-  
+  vertical-align: top;
 }
-
 tr:nth-child(even) {background-color: $clr-sucanul;}
